course2 init.