@@ -3,12 +3,12 @@ package com.microservices.demo.kafka.admin.client;
 import com.microservices.demo.config.KafkaConfigData;
 import com.microservices.demo.config.RetryConfigData;
 import com.microservices.demo.kafka.admin.exception.KafkaClientException;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.apache.kafka.clients.admin.AdminClient;
 import org.apache.kafka.clients.admin.CreateTopicsResult;
 import org.apache.kafka.clients.admin.NewTopic;
 import org.apache.kafka.clients.admin.TopicListing;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
 import org.springframework.retry.RetryContext;
@@ -20,28 +20,43 @@ import org.springframework.web.reactive.function.client.WebClient;
 import java.util.Collection;
 import java.util.List;
 import java.util.concurrent.ExecutionException;
+import java.util.stream.Collectors;
 
-/**
- * Created by Shahrooz on 6/24/2022.
- */
 @Component
-@RequiredArgsConstructor
-@Slf4j
 public class KafkaAdminClient {
 
+    private static final Logger LOG = LoggerFactory.getLogger(KafkaAdminClient.class);
+
     private final KafkaConfigData kafkaConfigData;
+
     private final RetryConfigData retryConfigData;
+
     private final AdminClient adminClient;
+
     private final RetryTemplate retryTemplate;
+
     private final WebClient webClient;
+
+
+    public KafkaAdminClient(KafkaConfigData config,
+                            RetryConfigData retryConfigData,
+                            AdminClient client,
+                            RetryTemplate template,
+                            WebClient webClient) {
+        this.kafkaConfigData = config;
+        this.retryConfigData = retryConfigData;
+        this.adminClient = client;
+        this.retryTemplate = template;
+        this.webClient = webClient;
+    }
 
     public void createTopics() {
         CreateTopicsResult createTopicsResult;
         try {
             createTopicsResult = retryTemplate.execute(this::doCreateTopics);
-            log.info("Create topic result: {}", createTopicsResult.values().values());
+            LOG.info("Create topic result {}", createTopicsResult.values().values());
         } catch (Throwable t) {
-            throw new KafkaClientException("Reached max number of retry for creating kafka topic(s)", t);
+            throw new KafkaClientException("Reached max number of retry for creating kafka topic(s)!", t);
         }
         checkTopicsCreated();
     }
@@ -87,33 +102,36 @@ public class KafkaAdminClient {
         }
     }
 
+
     private void sleep(Long sleepTimeMs) {
         try {
             Thread.sleep(sleepTimeMs);
         } catch (InterruptedException e) {
-            throw new KafkaClientException("Error while sleeping for waiting new created topics.");
+            throw new KafkaClientException("Error while sleeping for waiting new created topics!!");
         }
     }
 
     private void checkMaxRetry(int retry, Integer maxRetry) {
         if (retry > maxRetry) {
-            throw new KafkaClientException("Reached max number of retry for reading kafka topic(s)");
+            throw new KafkaClientException("Reached max number of retry for reading kafka topic(s)!");
         }
     }
 
     private boolean isTopicCreated(Collection<TopicListing> topics, String topicName) {
-        if (topics == null)
+        if (topics == null) {
             return false;
+        }
         return topics.stream().anyMatch(topic -> topic.name().equals(topicName));
     }
 
     private CreateTopicsResult doCreateTopics(RetryContext retryContext) {
         List<String> topicNames = kafkaConfigData.getTopicNamesToCreate();
-        log.info("Creating {} topics(s), attempt {}", topicNames.size(), retryContext.getRetryCount());
+        LOG.info("Creating {} topics(s), attempt {}", topicNames.size(), retryContext.getRetryCount());
         List<NewTopic> kafkaTopics = topicNames.stream().map(topic -> new NewTopic(
                 topic.trim(),
                 kafkaConfigData.getNumOfPartitions(),
-                kafkaConfigData.getReplicationFactor())).toList();
+                kafkaConfigData.getReplicationFactor()
+        )).collect(Collectors.toList());
         return adminClient.createTopics(kafkaTopics);
     }
 
@@ -122,17 +140,18 @@ public class KafkaAdminClient {
         try {
             topics = retryTemplate.execute(this::doGetTopics);
         } catch (Throwable t) {
-            throw new KafkaClientException("Reached max number of retry for reading kafka topic(s)", t);
+            throw new KafkaClientException("Reached max number of retry for reading kafka topic(s)!", t);
         }
         return topics;
     }
 
-    private Collection<TopicListing> doGetTopics(RetryContext retryContext) throws ExecutionException, InterruptedException {
-        log.info("Reading kafka topic {}, attempt {}",
+    private Collection<TopicListing> doGetTopics(RetryContext retryContext)
+            throws ExecutionException, InterruptedException {
+        LOG.info("Reading kafka topic {}, attempt {}",
                 kafkaConfigData.getTopicNamesToCreate().toArray(), retryContext.getRetryCount());
         Collection<TopicListing> topics = adminClient.listTopics().listings().get();
         if (topics != null) {
-            topics.forEach(topic -> log.debug("Topic with name {}", topic.name()));
+            topics.forEach(topic -> LOG.debug("Topic with name {}", topic.name()));
         }
         return topics;
     }
